[gd_scene load_steps=3 format=3 uid="uid://3rpiy63a7deb"]

[ext_resource type="Script" uid="uid://dkxadogsirwmr" path="res://scenes/two_camera_controller.gd" id="1_uccus"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(400, 180)

[node name="TwoCameraView" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TwoCameraController" type="Node2D" parent="."]
z_index = 999
z_as_relative = false
script = ExtResource("1_uccus")

[node name="Area2D" type="Area2D" parent="TwoCameraController"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TwoCameraController/Area2D"]
shape = SubResource("RectangleShape2D_tbgi4")
debug_color = Color(0, 0.6, 0, 0.160784)

[node name="leftCamTarget" type="Marker2D" parent="TwoCameraController"]
position = Vector2(-210, 0)

[node name="rightCamTarget" type="Marker2D" parent="TwoCameraController"]
position = Vector2(210, 0)

[node name="Bar" type="ColorRect" parent="."]
z_index = 100
z_as_relative = false
layout_mode = 0
offset_left = 294.0
offset_right = 298.0
offset_bottom = 256.0
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 592.0
offset_bottom = 256.0
theme_override_constants/separation = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_cull_mask = 4294967291
size = Vector2i(296, 256)
render_target_update_mode = 4

[node name="P1Cam" type="Camera2D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
position = Vector2(147, 128)
limit_left = 0
limit_top = 0
limit_bottom = 256
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[node name="SubViewportContainer2" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer2"]
disable_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_cull_mask = 4294967293
size = Vector2i(296, 256)
render_target_update_mode = 4

[node name="P2Cam" type="Camera2D" parent="HBoxContainer/SubViewportContainer2/SubViewport"]
visibility_layer = 2
position = Vector2(148, 128)
limit_left = 0
limit_top = 0
limit_bottom = 256
position_smoothing_enabled = true
position_smoothing_speed = 10.0
